cve_tracker: Fix header and style
* The info dialog shouldn't require more space than the page content
* The header is currently not visible because of a wrong var

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -209,3 +209,7 @@ a.button.delete {
 a:hover.delete {
   color: #ce0f0f;
 }
+
+.ui-widget .ui-widget-content {
+  word-break: break-word;
+}
